--- a/src/components/style.css
+++ b/src/components/style.css
@@ -56,6 +56,11 @@
     line-height: 1;
     white-space: nowrap;
     transition: var(--transition);
+    margin-top: 0px;
+}
+
+.big-title:nth-child(1){
+    margin-bottom: 0px;
 }
 
 /* Text styles */
@@ -69,7 +74,9 @@
 }
 
 .headline-l {
-    margin: 15px 30px 10px;
+    margin: 15px 30px 0px !important;
+    font-size: 1.3rem !important;
+    white-space: nowrap !important;
 }
 .headline-r {
     margin: 10px 0 15px;
@@ -335,6 +342,16 @@
     .para {
         line-height: 1.35;
     }
+    .side-popup{
+        transform: scale(0.75);
+        transition: transform 0.3s ease-in-out;
+        bottom: 13px !important;
+        left: 0px !important;
+    }
+
+    .img-2025{
+        transform: scale(0.85);
+    }
 }
 
 @media (max-width: 992px) {
@@ -350,6 +367,17 @@
     }
     .para {
         font-size: 1.15rem;
+    }
+
+    .side-popup{
+        transform: scale(0.75);
+        transition: transform 0.3s ease-in-out;
+        bottom: 13px !important;
+        left: 0px !important;
+    }
+    
+    .img-2025{
+        transform: scale(0.75);
     }
 }
 
